using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimStrings : MonoBehaviour
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnTavan="isOnTavan";
    internal static string isOnWall="isOnWall";
    internal static string attackTrigger="attack";
    internal static string canMove= "canMove";
    internal static string hasTarget= "hasTarget";
    internal static string isAlive= "isAlive";
    internal static string isHit= "isHit";
    internal static string lockVelocity= "lockVelocity";
    internal static string attackCooldown= "attackCooldown";
    internal static string rangedAttackTrigger= "rangedAttack";
}
